--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Boiler plate</title>
-        <meta charset="UTF-8"/>
+        <title>Hey</title>
+        <meta charset="utf-8"/>
     </head>
-
     <body>
-        <p>hey</p>
+        
     </body>
 </html>
