--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Hey</title>
-        <meta charset="utf-8"/>
+        <meta charset="utf-8">
     </head>
     <body>
-        
+        <h1>et tortor consequat</h1>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
+        <p><strong>Lorem ipsum</strong> dolor sit amet, <em>consectetur
+             adipiscing elit</em>, sed do eiusmod tempor incididunt ut 
+             labore et dolore magna aliqua. Ultrices gravida dictum fusce 
+             ut placerat orci. Interdum velit euismod in pellentesque massa 
+             placerat duis. Aliquet porttitor lacus luctus accumsan tortor. 
+             Aliquet enim tortor at auctor urna. Consequat interdum varius 
+             sit amet mattis vulputate enim. Ultricies mi quis hendrerit 
+             dolor magna eget. Turpis massa tincidunt dui ut. Nibh sit 
+             amet commodo nulla. Adipiscing bibendum est ultricies integer
+             quis auctor elit sed vulputate. Enim lobortis scelerisque 
+             fermentum dui faucibus in ornare quam viverra. Lorem donec
+             massa sapien faucibus et molestie. Dictum non consectetur
+             a erat nam at lectus urna duis. Facilisi nullam vehicula
+             ipsum a arcu cursus vitae. In nulla posuere sollicitudin
+             aliquam ultrices sagittis orci a.</p>
     </body>
 </html>
